// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDatabaseCode > basic connections > bigquery > generated code 1`] = `
"import json
import sqlmodel

credentials = json.loads(r"""{"type": "service_account", "project_id": "test"}""")
engine = sqlmodel.create_engine(f"bigquery://my-project/my_dataset", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > basic connections > chdb > generated code 1`] = `
"import chdb

engine = chdb.connect("file:///path/to/db.chdb", read_only=False)"
`;

exports[`generateDatabaseCode > basic connections > clickhouse > generated code 1`] = `
"import clickhouse_connect
import os

_password = os.environ.get("CLICKHOUSE_PASSWORD", "pass")
engine = clickhouse_connect.get_client(
  host="localhost",
  user="user",
  secure=False,
  port=8123,
  password=_password,
)"
`;

exports[`generateDatabaseCode > basic connections > databricks > generated code 1`] = `
"import os
import sqlalchemy

_access_token = os.environ.get("DATABRICKS_ACCESS_TOKEN", "my_access_token")
_server_hostname = os.environ.get("DATABRICKS_SERVER_HOSTNAME", "localhost")
_http_path = os.environ.get("DATABRICKS_HTTP_PATH", "http://localhost:8080")
DATABASE_URL = f"databricks://token:{_access_token}@{_server_hostname}?http_path={_http_path}"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > basic connections > databricks with catalog and schema > generated code 1`] = `
"import os
import sqlalchemy

_access_token = os.environ.get("DATABRICKS_ACCESS_TOKEN", "my_access_token")
_server_hostname = os.environ.get("DATABRICKS_SERVER_HOSTNAME", "localhost")
_http_path = os.environ.get("DATABRICKS_HTTP_PATH", "http://localhost:8080")
DATABASE_URL = f"databricks://token:{_access_token}@{_server_hostname}?http_path={_http_path}&catalog=my_catalog&schema=my_schema"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > basic connections > databricks with ibis > generated code 1`] = `
"import ibis
import os

_access_token = os.environ.get("DATABRICKS_ACCESS_TOKEN", "my_access_token")
_server_hostname = os.environ.get("DATABRICKS_SERVER_HOSTNAME", "localhost")
_http_path = os.environ.get("DATABRICKS_HTTP_PATH", "http://localhost:8080")
engine = ibis.databricks.connect(
  server_hostname=_server_hostname,
  http_path=_http_path,
  access_token=_access_token
)"
`;

exports[`generateDatabaseCode > basic connections > datafusion > generated code 1`] = `
"from datafusion import SessionContext
import ibis

con = ibis.datafusion.connect()"
`;

exports[`generateDatabaseCode > basic connections > datafusion with session > generated code 1`] = `
"from datafusion import SessionContext
import ibis

ctx = SessionContext()
# Sample table
_ = ctx.from_pydict({"a": [1, 2, 3]}, "my_table")

con = ibis.datafusion.connect(ctx)"
`;

exports[`generateDatabaseCode > basic connections > duckdb > generated code 1`] = `
"import duckdb

DATABASE_URL = "data.duckdb"
engine = duckdb.connect(DATABASE_URL, read_only=True)"
`;

exports[`generateDatabaseCode > basic connections > iceberg configured catalog > generated code 1`] = `
"from pyiceberg.catalog import load_catalog

catalog = load_catalog("my_catalog")"
`;

exports[`generateDatabaseCode > basic connections > iceberg dynamodb > generated code 1`] = `
"from pyiceberg.catalog.dynamodb import DynamoDBCatalog

catalog = DynamoDBCatalog(
  "my_catalog",
  **{
    "dynamodb.profile-name": "my_profile",
    "dynamodb.region": "us-east-1",
    "dynamodb.access-key-id": "my_access_key_id",
    "dynamodb.secret-access-key": "my_secret_access_key",
    "dynamodb.session-token": "my_session_token"
  },
)"
`;

exports[`generateDatabaseCode > basic connections > iceberg glue > generated code 1`] = `
"from pyiceberg.catalog.glue import GlueCatalog

catalog = GlueCatalog(
  "my_catalog",
  **{
    "warehouse": "/path/to/warehouse"
  },
)"
`;

exports[`generateDatabaseCode > basic connections > iceberg hive > generated code 1`] = `
"from pyiceberg.catalog.hive import HiveCatalog

catalog = HiveCatalog(
  "my_catalog",
  **{
    "uri": "thrift://localhost:9083",
    "warehouse": "/path/to/warehouse"
  },
)"
`;

exports[`generateDatabaseCode > basic connections > iceberg rest > generated code 1`] = `
"from pyiceberg.catalog.rest import RestCatalog

catalog = RestCatalog(
  "my_catalog",
  **{
    "uri": "http://localhost:8181",
    "warehouse": "/path/to/warehouse"
  },
)"
`;

exports[`generateDatabaseCode > basic connections > iceberg sql > generated code 1`] = `
"from pyiceberg.catalog.sql import SqlCatalog

catalog = SqlCatalog(
  "my_catalog",
  **{
    "uri": "postgresql://localhost:5432/iceberg",
    "warehouse": "/path/to/warehouse"
  },
)"
`;

exports[`generateDatabaseCode > basic connections > motherduck > generated code 1`] = `
"import duckdb
import os

_password = os.environ.get("MOTHERDUCK_TOKEN", "my_token")
conn = duckdb.connect("md:my_db", config={"motherduck_token": _password})"
`;

exports[`generateDatabaseCode > basic connections > mysql with SQLAlchemy > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("MYSQL_PASSWORD", "pass")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:3306/test"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > basic connections > mysql with SQLModel > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("MYSQL_PASSWORD", "pass")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:3306/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > basic connections > postgres with SQLAlchemy > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/test"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > basic connections > postgres with SQLModel > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > basic connections > pyspark > generated code 1`] = `
"from pyspark.sql import SparkSession
import ibis

con = ibis.pyspark.connect()"
`;

exports[`generateDatabaseCode > basic connections > pyspark with session > generated code 1`] = `
"from pyspark.sql import SparkSession
import ibis

session = SparkSession.builder.remote(f"sc://localhost:15002").getOrCreate()
con = ibis.pyspark.connect(session)"
`;

exports[`generateDatabaseCode > basic connections > redshift with DB credentials > generated code 1`] = `
"import os
import redshift_connector

_password = os.environ.get("REDSHIFT_PASSWORD", "my_password")
con = redshift_connector.connect(
    host="localhost",
    port=5439,
    database="test",
    user="my_user",
    password=_password,
)"
`;

exports[`generateDatabaseCode > basic connections > redshift with IAM credentials > generated code 1`] = `
"import redshift_connector

con = redshift_connector.connect(
  iam=True,
  host="localhost",
  port=5439,
  region="ap-southeast-1",
  database="test",
  access_key_id="my_access_key_id",
  secret_access_key="my_secret_access_key",
  session_token="my_session_token",
)"
`;

exports[`generateDatabaseCode > basic connections > snowflake > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
    password=_password,
  )
)"
`;

exports[`generateDatabaseCode > basic connections > snowflake with MFA > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
    password=_password,
  ),
  connect_args={"authenticator": "username_password_mfa"},
)"
`;

exports[`generateDatabaseCode > basic connections > snowflake with OAuth/PAT > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_TOKEN", "my_token")
engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    authenticator="oauth",
    token=_password,
  )
)"
`;

exports[`generateDatabaseCode > basic connections > snowflake with SSO > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import sqlmodel

engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
    authenticator="externalbrowser",
  )
)"
`;

exports[`generateDatabaseCode > basic connections > snowflake with key pair > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PRIVATE_KEY_PASSPHRASE", "my_passphrase")
engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
  ),
  connect_args={
    "authenticator": "SNOWFLAKE_JWT",
    "private_key_file": "/path/to/rsa_key.p8",
    "private_key_file_pwd": _password,
  },
)"
`;

exports[`generateDatabaseCode > basic connections > sqlite > generated code 1`] = `
"import sqlmodel

DATABASE_URL = "sqlite:////path/to/db.sqlite"
engine = sqlmodel.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > basic connections > supabase with SQLModel > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("SUPABASE_PASSWORD", "my_password")
DATABASE_URL = f"postgresql+psycopg2://postgres:{_password}@db.example.supabase.co:5432/postgres?sslmode=require"
engine = sqlmodel.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > basic connections > supabase with client-side pooling disabled > generated code 1`] = `
"from sqlalchemy.pool import NullPool
import os
import sqlalchemy

_password = os.environ.get("SUPABASE_PASSWORD", "my_password")
DATABASE_URL = f"postgresql+psycopg2://postgres.session:{_password}@db.example.supabase.co:6543/postgres?sslmode=require"
engine = sqlalchemy.create_engine(DATABASE_URL, poolclass=NullPool)"
`;

exports[`generateDatabaseCode > basic connections > timeplus > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("TIMEPLUS_PASSWORD", "")
DATABASE_URL = f"timeplus://default:{_password}@localhost:8123"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > basic connections > trino > generated code 1`] = `
"import os
import sqlmodel
import trino.sqlalchemy

_password = os.environ.get("TRINO_PASSWORD", "pass")
engine = sqlmodel.create_engine(f"trino://user:{_password}@localhost:8080/test")"
`;

exports[`generateDatabaseCode > connections with secrets > bigquery with credentials as secret > generated code 1`] = `
"import json
import os
import sqlmodel

_project = os.environ.get("ENV_PROJECT")
_dataset = os.environ.get("ENV_DATASET")
credentials = json.loads(r"""{"type": "service_account", "project_id": "test"}""")
engine = sqlmodel.create_engine(f"bigquery://{_project}/{_dataset}", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > connections with secrets > bigquery with credentials_json as a file path > generated code 1`] = `
"import sqlmodel

engine = sqlmodel.create_engine(f"bigquery://my-project/my_dataset", credentials_path="/etc/secrets/bigquery.json")"
`;

exports[`generateDatabaseCode > connections with secrets > bigquery with credentials_json as secret > generated code 1`] = `
"import json
import os
import sqlmodel

_credentials_json = os.environ.get("BIGQUERY_CREDENTIALS_JSON")
credentials = json.loads(_credentials_json)
engine = sqlmodel.create_engine(f"bigquery://my-project/my_dataset", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > connections with secrets > clickhouse with all connection details as secrets > generated code 1`] = `
"import clickhouse_connect
import os

_password = os.environ.get("ENV_PASSWORD")
_host = os.environ.get("ENV_HOST")
_user = os.environ.get("ENV_USER")
engine = clickhouse_connect.get_client(
  host=_host,
  user=_user,
  secure=False,
  port=8123,
  password=_password,
)"
`;

exports[`generateDatabaseCode > connections with secrets > motherduck with token as secret > generated code 1`] = `
"import duckdb
import os

_password = os.environ.get("ENV_TOKEN")
conn = duckdb.connect("md:my_db", config={"motherduck_token": _password})"
`;

exports[`generateDatabaseCode > connections with secrets > mysql with username and password as secrets > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("ENV_PASSWORD")
_username = os.environ.get("ENV_USER")
DATABASE_URL = f"mysql+pymysql://{_username}:{_password}@localhost:3306/test"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > connections with secrets > postgres with password as secret > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("ENV_PASSWORD")
_host = os.environ.get("ENV_HOST")
DATABASE_URL = f"postgresql://user:{_password}@{_host}:5432/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > connections with secrets > snowflake with multiple secrets > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_account = os.environ.get("ENV_ACCOUNT")
_password = os.environ.get("ENV_PASSWORD")
_user = os.environ.get("ENV_USER")
engine = sqlmodel.create_engine(
  URL(
    account=_account,
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user=_user,
    password=_password,
  )
)"
`;

exports[`generateDatabaseCode > connections with secrets > supabase with all connection details as secrets > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("SUPABASE_PASSWORD")
_username = os.environ.get("SUPABASE_USER")
_host = os.environ.get("SUPABASE_HOST")
_database = os.environ.get("SUPABASE_DB")
DATABASE_URL = f"postgresql+psycopg2://{_username}:{_password}@{_host}:5432/{_database}?sslmode=require"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > connections with secrets > timeplus with all connection details as secrets > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("ENV_PASSWORD")
_username = os.environ.get("ENV_USER")
_host = os.environ.get("ENV_HOST")
DATABASE_URL = f"timeplus://{_username}:{_password}@{_host}:8123"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > edge cases > ENV with special chars SQLModel > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass@#$%^&*")
DATABASE_URL = f"postgresql://user-name.special:{_password}@localhost:5432/test-db.special"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > bigquery with long credentials > generated code 1`] = `
"import json
import sqlmodel

credentials = json.loads(r"""xxxxxxxxxx""")
engine = sqlmodel.create_engine(f"bigquery://my-project/my_dataset", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > edge cases > chdb with no database > generated code 1`] = `
"import chdb

engine = chdb.connect("", read_only=False)"
`;

exports[`generateDatabaseCode > edge cases > clickhouse connect with minimal config > generated code 1`] = `
"import clickhouse_connect

engine = clickhouse_connect.get_client(
  host="localhost",
  user="user",
  secure=False,
)"
`;

exports[`generateDatabaseCode > edge cases > clickhouse with https > generated code 1`] = `
"import clickhouse_connect
import os

_password = os.environ.get("CLICKHOUSE_PASSWORD", "pass")
engine = clickhouse_connect.get_client(
  host="localhost",
  user="user",
  secure=True,
  port=8123,
  password=_password,
)"
`;

exports[`generateDatabaseCode > edge cases > clickhouse with no port > generated code 1`] = `
"import clickhouse_connect
import os

_password = os.environ.get("CLICKHOUSE_PASSWORD", "pass")
engine = clickhouse_connect.get_client(
  host="localhost",
  user="user",
  secure=False,
  password=_password,
)"
`;

exports[`generateDatabaseCode > edge cases > clickhouse with proxy_path > generated code 1`] = `
"import clickhouse_connect
import os

_password = os.environ.get("CLICKHOUSE_PASSWORD", "pass")
engine = clickhouse_connect.get_client(
  host="localhost",
  user="user",
  secure=False,
  port=8123,
  password=_password,
  proxy_path="/clickhouse",
)"
`;

exports[`generateDatabaseCode > edge cases > duckdb with relative path > generated code 1`] = `
"import sqlmodel

DATABASE_URL = "./relative/path/db.duckdb"
engine = sqlmodel.connect(DATABASE_URL, read_only=False)"
`;

exports[`generateDatabaseCode > edge cases > motherduck with special chars in database name > generated code 1`] = `
"import duckdb
import os

_password = os.environ.get("MOTHERDUCK_TOKEN", "my_token")
conn = duckdb.connect("md:test-db.special", config={"motherduck_token": _password})"
`;

exports[`generateDatabaseCode > edge cases > mysql with extremely long database name > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("MYSQL_PASSWORD", "pass")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:3306/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > edge cases > mysql with max port > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("MYSQL_PASSWORD", "pass")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:65535/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > edge cases > postgres with IPv6 > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@2001:0db8:85a3:0000:0000:8a2e:0370:7334:5432/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > postgres with URL-encoded characters > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass%20word")
DATABASE_URL = f"postgresql://user%20name:{_password}@localhost:5432/test%20db"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > postgres with domain socket > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@/var/run/postgresql:/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > postgres with non-standard port > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@localhost:54321/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > postgres with special chars SQLAlchemy > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("POSTGRES_PASSWORD", "pass@#$%^&*")
DATABASE_URL = f"postgresql://user-name.special:{_password}@localhost:5432/test-db.special"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > postgres with unicode > generated code 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "密码")
DATABASE_URL = f"postgresql://用户:{_password}@localhost:5432/测试数据库"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > edge cases > snowflake key pair without passphrase > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import sqlmodel

engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
  ),
  connect_args={
    "authenticator": "SNOWFLAKE_JWT",
    "private_key_file": "/path/to/rsa_key.p8",
  },
)"
`;

exports[`generateDatabaseCode > edge cases > snowflake with all optional fields filled > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlmodel.create_engine(
  URL(
    account="org-account",
    database="db",
    warehouse="compute_wh",
    schema="public",
    role="accountadmin",
    user="user",
    password=_password,
  )
)"
`;

exports[`generateDatabaseCode > edge cases > snowflake with minimal config SQLModel > generated code 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlmodel.create_engine(
  URL(
    account="account",
    database="db",
    user="user",
    password=_password,
  )
)"
`;

exports[`generateDatabaseCode > edge cases > sqlite with empty path > generated code 1`] = `
"import sqlmodel

DATABASE_URL = "sqlite:///"
engine = sqlmodel.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > edge cases > timeplus connect with minimal config > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("TIMEPLUS_PASSWORD", "")
DATABASE_URL = f"timeplus://default:{_password}@localhost:"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > edge cases > timeplus with no port > generated code 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("TIMEPLUS_PASSWORD", "")
DATABASE_URL = f"timeplus://default:{_password}@localhost:"
engine = sqlalchemy.create_engine(DATABASE_URL)"
`;

exports[`generateDatabaseCode > edge cases > trino with async support > generated code 1`] = `
"import aiotrino
import os
import sqlalchemy

_password = os.environ.get("TRINO_PASSWORD", "pass")
engine = sqlalchemy.create_engine(f"aiotrino://user:{_password}@localhost:8080/test")"
`;

exports[`generateDatabaseCode > security cases > bigquery with malformed JSON > sqlalchemy 1`] = `
"import json
import sqlalchemy

credentials = json.loads(r"""{"type": "service_account", "project_id": "test"""")
engine = sqlalchemy.create_engine(f"bigquery://my-project/my_dataset", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > security cases > bigquery with malformed JSON > sqlmodel 1`] = `
"import json
import sqlmodel

credentials = json.loads(r"""{"type": "service_account", "project_id": "test"""")
engine = sqlmodel.create_engine(f"bigquery://my-project/my_dataset", credentials_info=credentials)"
`;

exports[`generateDatabaseCode > security cases > mysql with very long password > sqlalchemy 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("MYSQL_PASSWORD", "xxxxxxxxxx")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:3306/test"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > security cases > mysql with very long password > sqlmodel 1`] = `
"import os
import sqlmodel

_password = os.environ.get("MYSQL_PASSWORD", "xxxxxxxxxx")
DATABASE_URL = f"mysql+pymysql://user:{_password}@localhost:3306/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'ssl': {'ssl-mode': 'preferred'}})"
`;

exports[`generateDatabaseCode > security cases > postgres with SQL injection attempt in database name > sqlalchemy 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/db'; DROP TABLE users;--"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > security cases > postgres with SQL injection attempt in database name > sqlmodel 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "pass")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/db'; DROP TABLE users;--"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > security cases > postgres with empty password > sqlalchemy 1`] = `
"import os
import sqlalchemy

_password = os.environ.get("POSTGRES_PASSWORD", "")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/test"
engine = sqlalchemy.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > security cases > postgres with empty password > sqlmodel 1`] = `
"import os
import sqlmodel

_password = os.environ.get("POSTGRES_PASSWORD", "")
DATABASE_URL = f"postgresql://user:{_password}@localhost:5432/test"
engine = sqlmodel.create_engine(DATABASE_URL, connect_args={'sslmode': 'require'})"
`;

exports[`generateDatabaseCode > security cases > snowflake with sensitive info in account > sqlalchemy 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlalchemy

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlalchemy.create_engine(
  URL(
    account="account-with-password123",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
    password=_password,
  )
)"
`;

exports[`generateDatabaseCode > security cases > snowflake with sensitive info in account > sqlmodel 1`] = `
"from snowflake.sqlalchemy import URL
import os
import sqlmodel

_password = os.environ.get("SNOWFLAKE_PASSWORD", "pass")
engine = sqlmodel.create_engine(
  URL(
    account="account-with-password123",
    database="db",
    warehouse="warehouse",
    schema="schema",
    role="role",
    user="user",
    password=_password,
  )
)"
`;
